[gd_scene load_steps=11 format=2]

[ext_resource path="res://world/client/MonkGardenClient.gd" type="Script" id=1]

[sub_resource type="MultiMesh" id=1]

[sub_resource type="CylinderMesh" id=2]
height = 0.1

[sub_resource type="SpatialMaterial" id=6]
emission_enabled = true
emission = Color( 0.741176, 0.745098, 0.0784314, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=3]
height = 0.2

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.145098, 0.654902, 0.0392157, 1 )

[sub_resource type="CapsuleMesh" id=5]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.862745, 0.54902, 0.960784, 1 )
emission_enabled = true
emission = Color( 0.972549, 0.705882, 0.972549, 1 )
emission_energy = 0.5
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1, 2, 1 )

[sub_resource type="SphereShape" id=9]
radius = 10.0

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="MultiMeshInstance" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 1 )

[node name="Base" type="MeshInstance" parent="MultiMeshInstance"]
mesh = SubResource( 2 )
material/0 = SubResource( 6 )

[node name="Leaf1" type="MeshInstance" parent="MultiMeshInstance"]
transform = Transform( 0.992661, -0.120934, 0, 0.120934, 0.992661, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Leaf2" type="MeshInstance" parent="MultiMeshInstance"]
transform = Transform( -0.992381, 0.1209, -0.0237168, 0.120934, 0.992661, 0, 0.0235427, -0.00286816, -0.999719, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Leaf3" type="MeshInstance" parent="MultiMeshInstance"]
transform = Transform( 0.049841, -0.00607203, 0.998739, 0.120934, 0.992661, 0, -0.991409, 0.120781, 0.0502095, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Leaf4" type="MeshInstance" parent="MultiMeshInstance"]
transform = Transform( 0.0178787, -0.00217812, -0.999838, 0.120934, 0.992661, 0, 0.9925, -0.120914, 0.0180109, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Body" type="MeshInstance" parent="MultiMeshInstance"]
transform = Transform( 1, 0, 0, 0, 0.147067, 0.989127, 0, -0.989127, 0.147067, 0, 1.88074, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="CollisionObject" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="CollisionObject"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.87082, 0 )
shape = SubResource( 8 )

[node name="UseableArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="UseableArea"]
shape = SubResource( 9 )
